--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -116,7 +116,9 @@ jobs:
       id: compile
       run: |
         cd openwrt
-        echo -e "$(nproc) thread compile"
+        echo "Precomile luci-base..."
+        make package/feeds/luci/luci-base/compile V=99
+        echo -e "$(nproc) thread compile..."
         echo "make -j$(nproc) || make -j1 || make -j1 V=s  || echo -e 'Something Wrong!' "
         make -j1 V=s &&  echo "STATUS=success" >>$GITHUB_OUTPUT ||  echo "STATUS=failed" >>$GITHUB_OUTPUT
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
